# pythonqt-patagui

./: .gitignore  CMakeLists.txt
src/: PythonQtSystem.h
